# Waitingway

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  Waitingway.sln  compose.yaml  docker-config.yml  web.env
Web/: .env  Cargo.toml
Web/.sqlx/: query-1edf516961b17eab5c325974a4152414b40aeac27c84be0a98d6127ef7940d55.json  query-2dc092a2969541f7f4ff15dff7f2caf0f0f438cfbaf3e1f42351f2fcc1070b76.json  query-3c92d42c1b5733c999ee9f48ae115a8b7c5f0e5cb62f6f0bf9f51b60c8f2d84b.json  query-4f50927dc6e837c65cdf1e9f473841f49da579b3d70eb725828882ae69b417f4.json  query-520526ab532e116f027dd3247f853e6e501e0971ab4b83479552e7ba44196982.json  query-7c368c08d7742001526cd0a7716f774f756e00c586dab3d98ad54bfdc495ea6a.json
Web/src/: config.rs  db.rs  discord.rs  main.rs  models.rs  oauth.rs
Web/src/routes/: api.rs  oauth.rs
web/: .docker.env  .dockerignore  .env  Cargo.toml  Dockerfile  build.rs  compose.dev.yaml  compose.test.yaml  compose.yaml  config.yml  docker-up.sh  stasis_version.json  worlds.sql
web/.sqlx/: query-03a39747484c4b2443f26a71848e1f3260d377d763237f80c762947e5e296213.json  query-08dfa09bb75612b63d93f1f42f2d5afa914def820e15464053a2fdb7abdb8cb7.json  query-0b023ddaf2b790582ce117ce59273dda99f677b0cc5bf0383174fea98d642fde.json  query-0b6c1afcfb3298bb617632f431f40eb0fc2bf36184c2ab68af09cb54ce02d7e1.json  query-2110ab14010a108e0d85dbedae039a3005f20be872af50e50724421afaea0870.json  query-24064e17d23c4c95241f53f3c19a8b202eb9764b5efe7fcc461d403201bd189c.json  query-242db7c7c224ea55adfb7a0f76b0b4b8805c3293e261d84720d38865cee67bd4.json  query-2deb996925042516a45af3cac36980f571a5621f630496c5a5d41bc96dd446d2.json  query-321788254d517aa98bef3cb7db45f17e8c15fbd13fd59bc0845e2cd70b32205e.json  query-3660c24bf8f03869f2440e3b3932be13cb7ccf4401ada85f20eeb797a69041b1.json  query-382018063d3a8350d03871dee86043bea70792cdb0ecc63c03ce1a026b290dbf.json  query-3941ff386cc87f72d7781dcd076152517674784d4ad098b1caba69fd749320a1.json  query-39edb7370703145daacf23b84ce5682af9fb4cb51b0b473a55c48f9c223b2d0c.json  query-3b7e3c1e4bd2b284ac4586433e86962857294bb624fe959dbc1f3da025c711d3.json  query-42f42abcdc6be79b55e9999e4eb2eaaa0137ffc500dffb8792b0c1f6e263f994.json  query-46043a45d58e2ef2bd347a225e1e75850ec2ae3c41760d171df4a8d4854b3c46.json  query-50718380ad892080a7fe5b8933238917489f5a1c76d95384970660b366a15c53.json  query-613c281f1749faa003d0456e63e6e91db7d996184499a2e28a2bd0f2b9f259a7.json  query-63b607113f772c95d6c93345d10a69e494d99591613e6d0ffb4fc29080dc1af2.json  query-685622a596ed81eaa2be6fafb9fa61495af6c9026eaf4179808223d4ecdd8594.json  query-6cc55b50375e99dd8847736321009225cb3099e674b676d49977fa081e29026d.json  query-6fe23f928192652e82cba1e6e9a0ab51b12860341a8a4f71b856922dba2b5243.json  query-721d4cdd38218183f0591301e10688b57e41c5c9a3c1692efc7bb85899283cd0.json  query-86129b0c5c0e6989a2b9b67a6fc498451dda0b82e5f44906f4bb6b26ac3bab81.json  query-8e123df707bc525b3e91075dc6fac807bd88e9145aafbf68dab052864fa167aa.json  query-8f3ff1b848842b6c90ab9c4487bc744ee666517800ad9b9ce35570abdb993dec.json  query-90adf45503a642c8b5e60eef5cdf849d90b0cc382300e53b0947db490d5eec11.json  query-91d7279cba8fe9c3dd34e231fbe9fc9529a50f761002cff828ed326f96688390.json  query-9446c5339fd0ae000b8c76177329d7b32ec4c762b66ae2d9239d1fc42c9ecef3.json  query-95f71c5f0ba8fefadb3e52d9ee87daaf7753f6ccaf0cf8e5101d124d05135fbf.json  query-a04430232d2c202ccf6afcac2c813b669a39b7ef29eefc0d8af137a7b6ab4f71.json  query-a126e58d83696a580c2b4d799278ec6d44e37b23189658e90027ea23aa10032c.json  query-a2c2f8c4444315e417644b9c01ee0bba3f8df1cb333383d2f80bdb9bf6ed1b60.json  query-ab0817c5c9542e5399d07a6c81d794fba6a5247033ff56fd980e925a4a939fbb.json  query-c30b5dc229658b1b62fdef93c52e95a79882d51ea053cc860f6d5dbcebb0dd2d.json  query-c5b044072d4c2c1fb7b92d2138ddf54bb1670fa65211805f0026d3d55e358cd5.json  query-c7b2287f07bb5b1a17572cf97050baf3dd3fe6d78520e9078e352e803b2c62c6.json  query-c7c05c6f3a5611431385f37a641e6fbe78db4abe838260d22c98d1c389f3f720.json  query-c8a85b8ba02ab48275c307fc7af8e852a56fcc4d6cd1b090f0d330db0cc78782.json  query-d28d106e6e6eac43ed62e726e00111d1f9b18dfeac0bb9f213615cbc3a969cde.json  (+9 more)
web/migrations/: 20240416051518_recaps.sql  20240416052655_connections.sql  20240530040917_add-server-error-code.sql  20240530041405_queue-sizes.sql  20240611042132_add-error-info.sql  20240611042138_add-queue-sizes.sql  20240612024149_add-identify-times.sql  20240702052827_add-free-trial.sql  20240702060034_add-client-version.sql  20240831045911_add-reentered.sql  20240831064332_add-recaps-start-time-index.sql  20240901080824_worlds.sql  20240901092121_queue-estimate-mview.sql  20241224093345_travel-states.sql  20241225214828_world-statuses.sql  20241226005259_world-abbreviations.sql  20241226021629_world-hidden.sql  20241228203720_fix-indexes.sql  20241228210331_summary-mview.sql  20250210055000_duty-types.sql  20250210055907_duty-recaps.sql  20250211001205_roulette-sizes.sql  20250211201020_jobs.sql  20250216200907_summary-optimizations.sql  20250217031345_deduplications.sql  20250217071143_queue-estimate-optimizations.sql
web/src/: auth.rs  cache.rs  config.rs  db.rs  db_wrappers.rs  discord.rs  main.rs  models.rs  natives.rs  oauth.rs  redis_client.rs  redis_utils.rs  stopwatch.rs  subscriptions.rs  worlds.rs
web/src/crons/: mod.rs  refresh_dc_travels.rs  refresh_materialized_views.rs  refresh_queue_estimates.rs  refresh_travel_states.rs  refresh_world_statuses.rs  update_activity.rs  update_stasis.rs
web/src/discord/: client.rs  mod.rs  travel_param.rs  utils.rs
web/src/discord/commands/: admin.rs  mod.rs  queue_times.rs  stats.rs  subscribe.rs  travel.rs  unsubscribe.rs  utils.rs
web/src/discord/notifications/: duty.rs  login.rs  mod.rs
web/src/middleware/: auth.rs  mod.rs  version.rs
web/src/models/: duty.rs  duty_db.rs  job_info.rs  login.rs  mod.rs  summary.rs  travel.rs  world_info.rs  world_status.rs
web/src/routes/: api.rs  assets.rs  mod.rs  redirects.rs
web/src/storage/: db.rs  db_wrappers.rs  mod.rs
web/static/: browserconfig.xml  index.html  manifest.json
web/static/assets/: main.js  style.css  theme.js  toggle.css
(+91 files in other folders)
