[package]
name = "waitingway-web"
authors = ["Asriel Camora <asriel@camora.dev>"]
description = "Backend web server for Waitingway"
repository = "https://github.com/WorkingRobot/Waitingway"
version = "2.2.15"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
actix-web-lab = "0.23.0"
actix-web-prom = { version = "0.9.0", features = ["process"] }
actix-files = "0.6.6"
anyhow = "1.0.95"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
base64 = "0.22.1"
config = { version = "0.15.6", default-features = false, features = ["yaml"] }
chacha20poly1305 = "0.10.1"
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures-util = { version = "0.3.31", default-features = false, features = [
    "std",
] }
fuzzy-matcher = "0.3.7"
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.14.0"
konst = "0.3.16"
log = "0.4.25"
os_info = "3.9.2"
poise = { version = "0.6.1", default-features = false, features = [
    "cache",
], git = "https://github.com/serenity-rs/poise.git", rev = "80a3a9c3ca1629725f0fa4ec98372d39cf36f6b6" }
postcard = { version = "1.1.1", default-features = false, features = [
    "use-std",
] }
prometheus = { version = "0.13.4", default-features = false }
rand = "0.8.5"
redis = { version = "0.28.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serenity = { version = "0.12.4", default-features = false, features = [
    "builder",
    "framework",
    "gateway",
    "http",
    "rustls_backend",
] }
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
    "time",
    "uuid",
] }
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["serde", "formatting"] }
titlecase = "3.3.0"
tokio = { version = "1.43.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
] }
tokio-util = "0.7.13"
url = "2.5.4"
uuid = { version = "1.12.1", features = ["serde", "fast-rng", "v7"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59.0", features = ["Win32_System_Threading"] }
nt-time = { version = "0.10.6", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = ">=0.16.0", default-features = false }

[profile.dev.package.sqlx-macros]
opt-level = 3

[dev-dependencies]

[build-dependencies]
copy_to_output = "2.2.0"
build-target = "0.4.0"
