[package]
name = "waitingway-web"
authors = ["Asriel Camora <asriel@camora.dev>"]
description = "Backend web server for Waitingway"
repository = "https://github.com/WorkingRobot/Waitingway"
version = "2.4.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-web = "4.10"
actix-web-httpauth = "0.8"
actix-web-lab = "0.24"
actix-web-prom = { version = "0.10", features = ["process"] }
actix-files = "0.6"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
base64 = "0.22"
config = { version = "0.15", default-features = false, features = ["yaml"] }
chacha20poly1305 = "0.10"
dotenvy = "0.15"
env_logger = "0.11"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
fuzzy-matcher = "0.3"
hex = { version = "0.4", features = ["serde"] }
itertools = "0.14"
konst = "0.4"
log = "0.4"
num_enum = "0.7"
os_info = "3.14"
poise = { version = "0.6", default-features = false, features = [
    "cache",
], git = "https://github.com/serenity-rs/poise.git", rev = "80a3a9c3ca1629725f0fa4ec98372d39cf36f6b6" }
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
prometheus = { version = "^0.14", default-features = false }
rand = "0.9"
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serenity = { version = "0.12", default-features = false, features = [
    "builder",
    "framework",
    "gateway",
    "http",
    "rustls_backend",
] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
    "time",
    "uuid",
] }
thiserror = "2.0"
thousands = "0.2"
time = { version = "0.3", features = ["serde", "formatting"] }
titlecase = "3.6"
tokio = { version = "1.47", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
] }
tokio-util = "0.7"
url = "2.5"
uuid = { version = "1.19", features = ["serde", "fast-rng", "v7"] }
sha1 = "0.10"

xiv-dl-core = { git = "https://github.com/WorkingRobot/ffxiv-downloader.git", branch = "main" }
xiv-dl-cache = { git = "https://github.com/WorkingRobot/ffxiv-downloader.git", branch = "main" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Threading"] }
nt-time = { version = "0.13", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = ">=0.18", default-features = false }

[profile.dev.package.sqlx-macros]
opt-level = 3

[dev-dependencies]

[build-dependencies]
copy_to_output = "2.2.0"
build-target = "0.4.0"
rerun_except = "1.0.0"
